--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,15 +1,142 @@
+@use "./variables.scss" as *;
+
 .arrow {
-  --bg: #FFF;
-  --arrow: #1F8B48;
+  --bg: #fff;
+  --arrow: #1f8b48;
   display: inline-block;
 }
 
 .arrow--green {
-  --bg: #1F8B48;
-  --arrow: #FFFFFF;
+  --bg: #1f8b48;
+  --arrow: #ffffff;
 }
 
-.arrow--right{
+.arrow--right {
   transform: rotate(180deg);
 }
 
+.c-button {
+  font: $button;
+  border-radius: 4rem;
+  padding: 1.6rem;
+  padding-left: 2.4rem;
+  display: flex;
+  gap: 0.8rem;
+  border: none;
+  background-color: $white-color;
+  color: $dark-text-color;
+  cursor: pointer;
+  align-items: center;
+  justify-content: space-between;
+
+  &__accent {
+    color: $white-color;
+    background-color: $accent-color;
+  }
+
+  &.slider {
+    padding: 0;
+    border-radius: 5rem;
+    cursor: pointer;
+  }
+
+  &:active .arrow {
+    --bg: #1f8b48;
+    --arrow: #ffffff;
+  }
+
+  @media (max-width: 960px) {
+    font-size: 1.8rem;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 1.6rem;
+    padding: 1.2rem;
+  }
+}
+
+.u-hero__title {
+  font: $h1;
+
+  @media (max-width: 960px) {
+    font-size: 3.2rem;
+  }
+
+  @media (max-width: 400px) {
+    color: $dark-text-color;
+  }
+}
+
+.u-h2__title {
+  font: $h2;
+
+  @media (max-width: 960px) {
+    font-size: 2.8rem;
+  }
+}
+
+.u-h4__title {
+  font: $h4;
+
+  @media (max-width: 960px) {
+    font-size: 2rem;
+  }
+}
+
+.u-lead_text {
+  font: $lead;
+
+  @media (max-width: 960px) {
+    font-size: 1.8rem;
+  }
+
+  @media (max-width: 400px) {
+    font-size: 1.2rem;
+  }
+}
+
+.u-body_text {
+  font: $body;
+
+  @media (max-width: 640px) {
+    font-size: 1.2rem;
+  }
+}
+
+.u-padding {
+  padding: 6.4rem;
+
+  @media (max-width: 960px) {
+    padding: 4.8rem;
+  }
+
+  @media (max-width: 640px) {
+    padding: 2.4rem;
+  }
+
+  @media (max-width: 400px) {
+    padding: 1.2rem;
+  }
+}
+
+.u-section {
+  display: flex;
+  gap: 0.8rem;
+  margin-top: 9.6rem;
+
+  @media (max-width: 960px) {
+    margin-top: 6.4rem;
+  }
+
+  @media (max-width: 480px) {
+    margin-top: 3.2rem;
+  }
+}
+
+.u-note_text {
+  font: $note;
+
+  @media (max-width: 640px) {
+    color: $dark-text-color;
+  }
+}
