--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,10 +7,10 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 62.5%;
 
   @media (max-width: 960px) {
-    font-size: 8px;
+    font-size: 50%;
   }
 }
 
