--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -123,8 +123,7 @@
 
     @media (max-width: 480px) {
       flex-direction: column;
-      padding-right: 0;
-      padding-left: 0;
+      padding: 0;
     }
 
     &-left {
@@ -135,9 +134,11 @@
       flex: 2;
 
       @media (max-width: 480px) {
+        padding-top: 1.6rem;
+
         h1 {
           position: absolute;
-          top: -55%;
+          top: -60%;
           left: 5%;
           width: 50%;
 
@@ -174,7 +175,7 @@
         margin-top: 2rem;
       }
 
-      @media (max-width: 400px) {
+      @media (max-width: 320px) {
         text-align: center;
         align-self: center;
       }
@@ -404,7 +405,7 @@
         display: flex;
         gap: 3.2rem;
 
-        @media (max-width: 320px) {
+        @media (max-width: 480px) {
           flex-direction: column;
           gap: 1.6rem;
         }
